<resources>
    <string name="app_name">Dev Community</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_profile">User profile</string>
    <string name="profile_name">Sandra Adams</string>
    <string name="profile_email">sandra.adams@email.com</string>
    <string name="profile_emailStr">Email</string>
    <string name="action_settings">Settings</string>
    <string name="splash_title">Dev Community</string>
    <string name="menu_home">News</string>
    <string name="menu_gallery">Articles</string>
    <string name="menu_slideshow">Events</string>
    <string name="menu_tools">Calendar</string>
    <string name="menu_share">Profile</string>
    <string name="menu_send">FAQs</string>
    <string name="menu_settings">Settings</string>
    <string name="tutorial_msg_1">Be in touch</string>
    <string name="tutorial_msg_2">Networking</string>
    <string name="tutorial_msg_3">Learn</string>
    <string name="tutorial_end">Skip tutorial</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_guest">ANONYMOUS USER</string>
    <string name="sign_in_error_1">UPS... couldn\'t Sign In</string>
    <string name="sign_in_error_2">Your username and password don\'t match.</string>
    <string name="sign_in_error_3">Please, try again.</string>
    <string name="sign_in_error_action">Please, try again.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_error_login">ErrorLoginActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="calendar_detail">Calendar Detail</string>
    <string name="title_activity_faqs">FAQS</string>
</resources>
