<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/ic_file"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_24px"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_scheduler"
            android:icon="@drawable/ic_schedule_24px"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_share"
                android:visible="false" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="Login"
                android:visible="false" />
            <item
                android:id="@+id/nav_faqs"
                android:icon="@drawable/ic_question_answer_24px"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
