<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news">

    <fragment
        android:id="@+id/nav_news"
        android:name="cat.urv.deim.asm.p2.common.ui.news.NewsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_articles"
        android:name="cat.urv.deim.asm.p2.common.ui.articles.ArticlesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/nav_events"
        android:name="cat.urv.deim.asm.p2.common.ui.events.EventsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_scheduler"
        android:name="cat.urv.deim.asm.p2.common.ui.scheduler.SchedulerFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_scheduler" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="cat.urv.deim.asm.p2.common.ui.profile.ProfileFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_faqs"
        android:name="cat.urv.deim.asm.p2.common.ui.faqs.FaqsFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_faqs" />
</navigation>